--- a/wireguard-tools/Cargo.toml
+++ b/wireguard-tools/Cargo.toml
@@ -4,5 +4,7 @@ version = "0.0.0"
 edition = "2021"
 authors = ["myOmikron <git@omikron.dev>"]
 license = "MIT"
+description = "Tools for managing wireguard connections."
+repository = "https://github.com/myOmikron/wireguard-manager/"
 
 [dependencies]
